force-app/main/default/objects/Lead/fields/Original_Lead_Detail__c.field-meta.xml
<CustomField>
    <fullName>Original_Lead_Detail__c</fullName>
    <description>Used to store lead detail that would be necessary to work the lead, but could not be found in Salesforce at the time the lead was inserted. Referral Account, Referral Contact, Sales Rep, etc...</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Lead Detail</label>
    <type>TextArea</type>
</CustomField>