force-app/main/default/objects/Lead/fields/Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone__c</fullName>
    <description>Used for NSS Data Migration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Phone</label>
    <type>Phone</type>
</CustomField>