force-app/main/default/objects/Lead/fields/OwnedBy__c.field-meta.xml
<CustomField>
    <fullName>OwnedBy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The destination of the record when loaded from the file loader</inlineHelpText>
    <label>Owned By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>