force-app/main/default/objects/Lead/fields/OwnedByPrev__c.field-meta.xml
<CustomField>
    <fullName>OwnedByPrev__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The previous value of the owned by field.</inlineHelpText>
    <label>OwnedByPrev</label>
    <length>80</length>
    <type>Text</type>
</CustomField>