force-app/main/default/objects/Lead/fields/OwnedByUser__c.field-meta.xml
<CustomField>
    <fullName>OwnedByUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the &quot;Owned By&quot; is a user, the lookup to the User</inlineHelpText>
    <label>OwnedByUser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>