force-app/main/default/objects/Lead/fields/PEOLeasingDefault__c.field-meta.xml
<CustomField>
    <fullName>PEOLeasingDefault__c</fullName>
    <formula>AND( PEOLeasing__c,( NumberOfEmployees &gt;= 5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Do we default the PEO rep on NSS Referrals?</inlineHelpText>
    <label>PEO Leasing Default</label>
    <type>Checkbox</type>
</CustomField>