force-app/main/default/objects/Lead/fields/Primary_Competition__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competition__c</fullName>
    <label>Primary Competition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>ADP Payforce</fullName>
            </value>
            <value>
                <fullName>ADP Total Source</fullName>
            </value>
            <value>
                <fullName>ADP Workforce Now</fullName>
            </value>
            <value>
                <fullName>Advantage Payroll</fullName>
            </value>
            <value>
                <fullName>Alpha Staff</fullName>
            </value>
            <value>
                <fullName>Asure Software</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Bank of America</fullName>
            </value>
            <value>
                <fullName>BB&amp;T</fullName>
            </value>
            <value>
                <fullName>BluePay</fullName>
            </value>
            <value>
                <fullName>Capital One Merchant Services</fullName>
            </value>
            <value>
                <fullName>CardConnect</fullName>
            </value>
            <value>
                <fullName>Ceridian</fullName>
            </value>
            <value>
                <fullName>Certify</fullName>
            </value>
            <value>
                <fullName>Chase Commerce Solutions</fullName>
            </value>
            <value>
                <fullName>Chrome River</fullName>
            </value>
            <value>
                <fullName>Citi Merchant Services</fullName>
            </value>
            <value>
                <fullName>Commerce Bancshares</fullName>
            </value>
            <value>
                <fullName>Compupay</fullName>
            </value>
            <value>
                <fullName>Concur</fullName>
            </value>
            <value>
                <fullName>Concur Breeze</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>Current Broker</fullName>
            </value>
            <value>
                <fullName>Digital Advisors (Digital Insurance)</fullName>
            </value>
            <value>
                <fullName>EE Leasing/PEO</fullName>
            </value>
            <value>
                <fullName>Elavon</fullName>
            </value>
            <value>
                <fullName>Electronic Payments</fullName>
            </value>
            <value>
                <fullName>Evolution Licensee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>