force-app/main/default/objects/Lead/fields/Primary_Lead__c.field-meta.xml
<CustomField>
    <fullName>Primary_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If there are multiple leads for the same company, one lead is designated as the Primary Lead. The primary lead--usually a decision maker--is the person the NSR wants to talk to and will show up in call lists. Other leads will look up to the Primary Lead and will be accessible through a related list on the Primary Lead record and not included in Call Lists.</description>
    <inlineHelpText>Select the Primary Lead to which this lead should be associated.</inlineHelpText>
    <label>Primary Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Additional Contact Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>