force-app/main/default/objects/Lead/fields/ProcessNotes__c.field-meta.xml
<CustomField>
    <fullName>ProcessNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Processing notes made during the processing of this record.</inlineHelpText>
    <label>Process Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>