force-app/main/default/objects/Lead/fields/Product_Division__c.field-meta.xml
<CustomField>
    <fullName>Product_Division__c</fullName>
    <description>The field values come from Marketo&apos;s web forms and will help in the disposition of the lead to the appropriate sales rep.</description>
    <label>Product Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>ESR</fullName>
            </value>
            <value>
                <fullName>ExpenseWire</fullName>
            </value>
            <value>
                <fullName>FA</fullName>
            </value>
            <value>
                <fullName>HNBF</fullName>
            </value>
            <value>
                <fullName>HRS</fullName>
            </value>
            <value>
                <fullName>Leasing/PEO</fullName>
            </value>
            <value>
                <fullName>MerchantServices</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>PEO-ASO</fullName>
            </value>
            <value>
                <fullName>S132</fullName>
            </value>
            <value>
                <fullName>PEOHROi</fullName>
            </value>
            <value>
                <fullName>PEOOasis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>