force-app/main/default/objects/Lead/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>Specific products that the lead may be interested in.</description>
    <inlineHelpText>Select the specific product(s) in which the lead has expressed interest.</inlineHelpText>
    <label>Product of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting Loans Payments</fullName>
            </value>
            <value>
                <fullName>Business Insurance</fullName>
            </value>
            <value>
                <fullName>Employee Benefits</fullName>
            </value>
            <value>
                <fullName>Hiring Onboarding</fullName>
            </value>
            <value>
                <fullName>HR Services</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>PEO</fullName>
            </value>
            <value>
                <fullName>Startup Services</fullName>
            </value>
            <value>
                <fullName>Time Attendance</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>