force-app/main/default/objects/Lead/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Promo Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>