force-app/main/default/objects/Lead/fields/Recycle_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recycle_Reason__c</fullName>
    <label>Recycle Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Chose Another Provider</fullName>
            </value>
            <value>
                <fullName>No interest</fullName>
            </value>
            <value>
                <fullName>Unable to Reach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>