force-app/main/default/objects/Lead/fields/Referral_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referral_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The referral source for this lead</description>
    <label>Referral Contact</label>
    <referenceTo>Referral_Contact__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Lead</relationshipName>
    <type>Lookup</type>
</CustomField>