force-app/main/default/objects/Lead/fields/Referral_ID__c.field-meta.xml
<CustomField>
    <fullName>Referral_ID__c</fullName>
    <description>This field was created for the Influitive Integration.  Unfortunately the api name needs to be named exactly like this, as it is passed into an outbound message and they&apos;ve indicated the field needed to be named in this way.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Influitive Referral ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>