force-app/main/default/objects/Lead/fields/Referral_National_Account__c.field-meta.xml
<CustomField>
    <fullName>Referral_National_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Franchise National Account referral account.
relabeled per case#21097844</description>
    <inlineHelpText>The Franchise National Account referral account.</inlineHelpText>
    <label>Strategic Account Partner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>You must select a Referral Account that is a Strategic Account.</errorMessage>
        <filterItems>
            <field>Referral_Account__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales Channel Referral Account Record Type</value>
        </filterItems>
        <filterItems>
            <field>Referral_Account__c.Referral_Source_Business_Type__c</field>
            <operation>equals</operation>
            <value>Strategic Account, Strategic Accountant Firm</value>
        </filterItems>
        <infoMessage>Only Referral Accounts that are Strategic Accounts will be displayed.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Referral_Account__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>