force-app/main/default/objects/Lead/fields/ReferralContact__c.field-meta.xml
<CustomField>
    <fullName>ReferralContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to referral contact source of this lead</inlineHelpText>
    <label>Referral Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Referral Contact)</relationshipLabel>
    <relationshipName>LeadsRefCtct</relationshipName>
    <type>Lookup</type>
</CustomField>