force-app/main/default/objects/Lead/fields/Referring_Employee__c.field-meta.xml
<CustomField>
    <fullName>Referring_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Employee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.HR_Person_Id__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Referring Employee)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>