force-app/main/default/objects/Lead/fields/Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reject_Reason__c</fullName>
    <label>Reject Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Already engaged with prospect</fullName>
            </value>
            <value>
                <fullName>Employee Inquiry</fullName>
            </value>
            <value>
                <fullName>Employer Inquiry</fullName>
            </value>
            <value>
                <fullName>Invalid Contact Info</fullName>
            </value>
            <value>
                <fullName>Non-Sales Lead</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Robo Call/Bot Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>