force-app/main/default/objects/Lead/fields/SegmentationCore1__c.field-meta.xml
<CustomField>
    <fullName>SegmentationCore1__c</fullName>
    <formula>false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Does this meet the criteria for the Core Segmentation?</inlineHelpText>
    <label>Segmentation Core1</label>
    <type>Checkbox</type>
</CustomField>