force-app/main/default/objects/Lead/fields/SIC_Description__c.field-meta.xml
<CustomField>
    <fullName>SIC_Description__c</fullName>
    <description>SIC Code Description provided by InfoGroup list.Added per Loading Leads requirements, section 2.1.4.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>SIC Code Description provided by InfoGroup list.</inlineHelpText>
    <label>SIC Description</label>
    <type>TextArea</type>
</CustomField>