force-app/main/default/objects/Lead/fields/SignificantLead__c.field-meta.xml
<CustomField>
    <fullName>SignificantLead__c</fullName>
    <formula>Lead_Company__r.SignificantLead__c = Id</formula>
    <inlineHelpText>Is this the most significant lead?</inlineHelpText>
    <label>Significant Lead</label>
    <type>Checkbox</type>
</CustomField>