force-app/main/default/objects/Lead/fields/SurePayroll_ID__c.field-meta.xml
<CustomField>
    <fullName>SurePayroll_ID__c</fullName>
    <description>FLurz changed Data Type from  Number (18,0)  to  Text - 18  per Case #14143769</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SurePayroll ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>