force-app/main/default/objects/Lead/fields/tdc_tsw__SMS_Opt_out__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__SMS_Opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Opt out</label>
    <type>Checkbox</type>
</CustomField>