force-app/main/default/objects/Lead/fields/tdc_tsw__Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>