force-app/main/default/objects/Lead/fields/TeamSellingASO__c.field-meta.xml
<CustomField>
    <fullName>TeamSellingASO__c</fullName>
    <formula>AND(
NumberOfEmployees &gt;= 10
,NumberOfEmployees &lt; 50
,NOT(ISPICKVAL(LeadSource,&quot;Referral-Bank&quot;))
,NOT(ISPICKVAL(LeadSource,&quot;Referral-CPA&quot;))
,NOT(ISPICKVAL(LeadSource,&quot;Referral-CPA-AICPA&quot;))
,NOT(ISPICKVAL(LeadSource,&quot;Referral-CPA-AICPA Platinum&quot;))
,NOT(ISPICKVAL(LeadSource,&quot;Referral-CPA-Non-AICPA&quot;))
, NOT(INCLUDES(Referral_National_Account__r.Sensitivity__c,&quot;HR&quot;))
)</formula>
    <inlineHelpText>Is this available for ASO Team Selling?</inlineHelpText>
    <label>Team Selling ASO</label>
    <type>Checkbox</type>
</CustomField>