force-app/main/default/objects/Lead/fields/TimeZoneAbbrev__c.field-meta.xml
<CustomField>
    <fullName>TimeZoneAbbrev__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Time Zone Abbrev</label>
    <length>5</length>
    <type>Text</type>
</CustomField>