force-app/main/default/objects/Lead/fields/To_Be_Deleted__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to mark this Lead for deletion during the next delete process.
Case #20316596 - automate delete process to run weekly and actually delete Leads</description>
    <label>To Be Deleted</label>
    <type>Checkbox</type>
</CustomField>