force-app/main/default/objects/Lead/fields/Touchpoint__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint__c</fullName>
    <label>Touchpoint #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>