force-app/main/default/objects/Lead/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <description>Used in processing to help identify this record. This is not a persistent value and can change during subsequent transactions.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>