force-app/main/default/objects/Lead/fields/UseZipAssignmentRules__c.field-meta.xml
<CustomField>
    <fullName>UseZipAssignmentRules__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is checked on insert of a record, the process will use the zip code to determine the ownership fields.</inlineHelpText>
    <label>Use Zip Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>