force-app/main/default/objects/Lead/fields/WebleadDialedTime__c.field-meta.xml
<CustomField>
    <fullName>WebleadDialedTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The first date/time the weblead was dialed. Will only populate if the field is already blank.</inlineHelpText>
    <label>Weblead Dialed Time</label>
    <type>DateTime</type>
</CustomField>