force-app/main/default/objects/Lead/fields/X401K_Assets__c.field-meta.xml
<CustomField>
    <fullName>X401K_Assets__c</fullName>
    <description>For UPMC - future integration</description>
    <label>401K Assets*-</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>