force-app/main/default/objects/Lead/recordTypes/Consumer_Privacy_DeIdentify.recordType-meta.xml
<RecordType>
    <fullName>Consumer_Privacy_DeIdentify</fullName>
    <active>true</active>
    <businessProcess>Core Lead Process</businessProcess>
    <description>User request to remove their information to be de-identify. flow runs and update the record type to this record</description>
    <label>Consumer Privacy DeIdentify</label>
</RecordType>