force-app/main/default/objects/Lead/recordTypes/CoreLeadRecordType.recordType-meta.xml
<RecordType>
    <fullName>CoreLeadRecordType</fullName>
    <active>true</active>
    <businessProcess>Core Lead Process</businessProcess>
    <description>Core Lead Record Type</description>
    <label>Core Lead Record Type</label>
</RecordType>