force-app/main/default/objects/Lead/recordTypes/Ecommerce_Lead.recordType-meta.xml
<RecordType>
    <fullName>Ecommerce_Lead</fullName>
    <active>true</active>
    <businessProcess>Core Lead Process</businessProcess>
    <description>Record Type for Ecommerce Leads</description>
    <label>Ecommerce Lead</label>
</RecordType>