force-app/main/default/objects/Lead/recordTypes/ExpenseWire_Lead_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>ExpenseWire_Lead_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Field Sales Lead Process</businessProcess>
    <description>ExpenseWire Lead Process</description>
    <label>ExpenseWire Lead Record Type</label>
</RecordType>