force-app/main/default/objects/Lead/recordTypes/HNBF_Lead_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>HNBF_Lead_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Field Sales Lead Process</businessProcess>
    <description>HNBF Lead Process</description>
    <label>HNBF Lead Record Type</label>
</RecordType>