force-app/main/default/objects/Lead/recordTypes/HRSLeadRecordType.recordType-meta.xml
<RecordType>
    <fullName>HRSLeadRecordType</fullName>
    <active>true</active>
    <businessProcess>Field Sales Lead Process</businessProcess>
    <description>HRS Lead Record Type</description>
    <label>HRS Lead Record Type</label>
</RecordType>