force-app/main/default/objects/Lead/recordTypes/MMSLeadRecordType.recordType-meta.xml
<RecordType>
    <fullName>MMSLeadRecordType</fullName>
    <active>true</active>
    <businessProcess>MMS Lead Process</businessProcess>
    <description>MMS Lead Record Type</description>
    <label>MMS Lead Record Type</label>
</RecordType>