force-app/main/default/objects/Lead/recordTypes/MSP_Lead_Record_type.recordType-meta.xml
<RecordType>
    <fullName>MSP_Lead_Record_type</fullName>
    <active>true</active>
    <businessProcess>MSP Lead Process</businessProcess>
    <label>MSP Lead Record type</label>
</RecordType>