force-app/main/default/objects/Lead/recordTypes/NSS_Lead_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>NSS_Lead_Record_Type</fullName>
    <active>true</active>
    <businessProcess>NSS Outbound Lead Process</businessProcess>
    <label>NSS Lead Record Type</label>
</RecordType>