force-app/main/default/objects/Lead/recordTypes/Oasis_Lead_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Oasis_Lead_Record_Type</fullName>
    <active>true</active>
    <businessProcess>PEO Lead Process</businessProcess>
    <description>Use this record type for Leads assigned to the SDRs to work</description>
    <label>Oasis Lead Record Type</label>
</RecordType>