force-app/main/default/objects/Lead/recordTypes/Payment_Processing_Lead_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Payment_Processing_Lead_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Field Sales Lead Process</businessProcess>
    <description>Payment Processing Lead Record Type</description>
    <label>Payment Processing Lead Record Type</label>
</RecordType>