force-app/main/default/objects/Lead/recordTypes/PCWC_Lead_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>PCWC_Lead_Record_Type</fullName>
    <active>true</active>
    <businessProcess>PC Lead Process</businessProcess>
    <label>PC Lead Record Type</label>
</RecordType>