force-app/main/default/objects/Lead/recordTypes/Pending_Leads.recordType-meta.xml
<RecordType>
    <fullName>Pending_Leads</fullName>
    <active>true</active>
    <businessProcess>Field Sales Lead Process</businessProcess>
    <description>This record type is used for Leads that could not have all look up fields populated and assigned to a sales rep. These leads require manual intervention to update then change record type to be visible to sales rep OR to mark as not viable.</description>
    <label>Pending Leads</label>
</RecordType>