force-app/main/default/objects/Lead/recordTypes/PEO_ASO_Lead_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>PEO_ASO_Lead_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Field Sales Lead Process</businessProcess>
    <description>PEO-ASO Lead Record Type</description>
    <label>PEO-ASO Lead Record Type</label>
</RecordType>