force-app/main/default/objects/Lead/recordTypes/PEOLeadRecordType.recordType-meta.xml
<RecordType>
    <fullName>PEOLeadRecordType</fullName>
    <active>true</active>
    <businessProcess>MMS Lead Process</businessProcess>
    <description>set up to handle PEO Centric prospecting records</description>
    <label>PEO Lead Record Type</label>
</RecordType>