force-app/main/default/objects/Lead/recordTypes/SysAdminRecordType.recordType-meta.xml
<RecordType>
    <fullName>SysAdminRecordType</fullName>
    <active>true</active>
    <businessProcess>Field Sales Lead Process</businessProcess>
    <label>Sys Admin Record Type</label>
</RecordType>