force-app/main/default/objects/Lead/validationRules/amp_dev__LeadSource_ReferringAdvocateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>amp_dev__LeadSource_ReferringAdvocateValidation</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(LeadSource, &apos;Referral Program&apos;) &amp;&amp;  ISBLANK(amp_dev__Referring_Advocate_Contact__c)</errorConditionFormula>
    <errorMessage>If &apos;Referral Program&apos; is selected as the Lead Source, you must select a Referring Advocate.</errorMessage>
</ValidationRule>