force-app/main/default/objects/Lead/validationRules/amp_dev__ReferringAdvocate_LeadSourceValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>amp_dev__ReferringAdvocate_LeadSourceValidation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISPICKVAL(LeadSource, &apos;Referral Program&apos;)) &amp;&amp; NOT(ISBLANK(amp_dev__Referring_Advocate_Contact__c))</errorConditionFormula>
    <errorMessage>If a Referring Advocate is selected, the Lead Source must be &apos;Referral Program&apos;.</errorMessage>
</ValidationRule>