force-app/main/default/objects/Lead/validationRules/Consent_to_Text_requires_MobilePhone.validationRule-meta.xml
<ValidationRule>
    <fullName>Consent_to_Text_requires_MobilePhone</fullName>
    <active>true</active>
    <description>if checking Consent to Text you must fill in Mobile Phone</description>
    <errorConditionFormula>Consent_to_Text__c &amp;&amp; 
OR(ISCHANGED(Consent_to_Text__c), ISNEW()) 
&amp;&amp; $Profile.Name != &apos;System Administrator API-Lead Loader&apos; 
&amp;&amp; ISBLANK(MobilePhone)</errorConditionFormula>
    <errorMessage>You must fill in the Mobile Phone if you are checking the Consent to Text box.</errorMessage>
</ValidationRule>