force-app/main/default/objects/Lead/validationRules/Do_Not_Call_Phone_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_Not_Call_Phone_Required</fullName>
    <active>true</active>
    <description>If the Do Not Call checkbox is selected a Phone number must be populated.</description>
    <errorConditionFormula>AND( OR(ISNEW(),
ISCHANGED(DoNotCall)), 
DoNotCall  = True, 
Phone = &quot;&quot;, 
NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;)),
NOT(BEGINS($Profile.Name,&quot;NSS&quot;)) )</errorConditionFormula>
    <errorMessage>If the Do Not Call checkbox is selected a Phone number must be populated.</errorMessage>
</ValidationRule>