force-app/main/default/objects/Lead/validationRules/Exclude_Paychex_Emails.validationRule-meta.xml
<ValidationRule>
    <fullName>Exclude_Paychex_Emails</fullName>
    <active>true</active>
    <description>Prevent leads from having specific email addresses.</description>
    <errorConditionFormula>Email  = &quot;mmucci@paychex.com&quot;</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>This email address is not allowed for a lead. Please choose another.</errorMessage>
</ValidationRule>